--- a/public/boilerplate.html
+++ b/public/boilerplate.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8"/>
-        <tittle>My Website</tittle>
+        <title>My Website</title>
     </head>
     <body>
         <h1>Welcome to my brand new Website</h1>
